Relative paths are supported by demux/xspf, you can however not specify a relative path using file:// as this is invalid. It also might be worth linking to the spec of available at xspf.org:
% tree /tmp/samples/tmp/samples├── foo.xspf└── sample_1.mp30 directories, 2 files
% pwd/home/refp/work/videolan/misc/video-samples
+/misc/video-samples% vlc -Irc -q /tmp/samples/foo.xspfVLC media player 2.2.4 Weatherwax (revision 2.2.3-37-g888b7e89)VLC media player 2.2.4 WeatherwaxCommand Line Interface initialized. Type `help' for help.> info+----[ Stream 0 ]|| Bitrate: 128 kb/s| Sample rate: 44100 Hz| Channels: Stereo| Type: Audio| Codec: MPEG Audio layer 1/2 (mpga)|+----[ end of stream info ]> quitShutting down.
Oh, you are correct - seems I must have tested with another sample than what I showed here on trac. I will fix this issue during the next new minutes, thank you!
Filip Roséenchanged title from VLC's XSPF still doesn't support relative paths at all despite the format itself supporting (Mac OS) to VLC's XSPF demuxer does not support relative paths
changed title from VLC's XSPF still doesn't support relative paths at all despite the format itself supporting (Mac OS) to VLC's XSPF demuxer does not support relative paths
Oh, you are correct - seems I must have tested with another sample than what I showed here on trac. I will fix this issue during the next new minutes, thank you!
Ok :-)
But to my first question...
Is it still a correct xspf format when removing file:///?
I'm not sure but it seems to be O.K. if I take a look at 6.2 in spec:
Is it still a correct xspf format when removing file:///?
Yes, the xspf specification says that URI handling shall confirm to RFC2396 (which is rendered obsolete by RFC3986.
If you are interested I recommend skimming through the mentioned RFC, a too long-didn't read is available in section Appendix A. Collected ABNF for URI.